# flight-deals-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: iam_permissions.md  storage_contract.md
docs/solution-design/: 01-scope-and-boundaries.md  02-runtime-and-job-model.md  03-search-backend-contract.md  04-domain-model-and-normalization.md  05-storage-abstraction.md  06-observability-testing-and-ci.md
infra/: event_bridge.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  s3.tf  tfplan  variables.tf
scripts/: run_local_hot_deals.py  run_local_refresh.py
src/flight_deals_engine/: __init__.py
src/flight_deals_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flight_deals_engine/adapters/: request_normalizer.py  response_normalizer.py
src/flight_deals_engine/application/: category_registry.py  commands.py  deal_refresh_service.py  hot_deals_service.py  normalizer.py  planner.py  services.py
src/flight_deals_engine/config/: destinations.py  settings.py
src/flight_deals_engine/domain/: deal_filters.py  flight_selection.py  hot_deal_scorer.py  interfaces.py  models.py  snapshot_transformer.py
src/flight_deals_engine/entrypoints/: lambda_handler.py  models.py
tests/integration/: test_full_cycle.py  test_hot_deals_full_cycle.py
tests/unit/: test_deal_filters.py  test_hot_deals_service.py  test_lambda_handler.py  test_normalizer.py  test_planner.py  test_refresh_calendar_prices_job.py  test_refresh_hot_deals_job.py  test_refresh_last_minute_deals_job.py  test_search_backend_adapter.py  test_settings.py
(+13 files in other folders)
